--- a/TorrentService/appsettings.json
+++ b/TorrentService/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "Monitoring": {
-    "HandleAspNetLogs": true,
+    "HandleDotNetLogs": true,
     "RootLogPath": "Logs",
     "GrandOutput": { // Configuration by handler (e.g. TextFileConfiguration -> TextFile)
       "Handlers": {
