--- a/TorrentService/TorrentService.csproj
+++ b/TorrentService/TorrentService.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
+  <Import Project="..\Common\Shared.props" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CKSetup\CKSetup.csproj" />
+    <ProjectReference Include="..\CKSetup\CKSetup.csproj" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\TorrentService.Data\TorrentService.Data.csproj" />
   </ItemGroup>
 
 </Project>
